# deepwalk-vs-gnn-node-embeddings

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/GAT/: __init__.py
src/GAT/datasets/: graph_data.py
src/GAT/evaluation/: post_training.py
src/GAT/training/: train.py
src/datasets/: graph_data.py
src/evaluation/: plots.py  post_training.py
src/lightning/: datamodule.py  deepwalk_module.py  gat_module.py  gcn_module.py
src/models/: deepwalk.py  gat.py  gcn.py
src/training/: train.py
