[project]
name = "deepwalk-vs-gnn-node-embeddings"
version = "0.1.0"
description = "Node classification using DeepWalk and GNN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "ruff>=0.15.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]



[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "D", "ANN", "C90"]  # docstrings, type hints, complexity
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true
